tests/paczka1/fuzzy1/84855971.err
Error in line 4: PeDf A7 13,3
Error in line 6: PeDf S79 2,3
Error in line 32: S79 S79 63,2
